`Added new endpoint to retrieve comments by post ID and updated related code`
